concord_macros/tests/trybuild/fail/codegen_contract/mismatched_macro_core_marker.rs
struct PreviousGeneratedContract;

const _: PreviousGeneratedContract = concord_core::__private::GENERATED_API_COMPATIBILITY;

fn main() {}
